Library/AXL(Library)/Visual Basic(Net)/AXA.vb


'Read A/D conversion data used H/W timer in specified input channel by digit value
Public Declare Function AxaiHwReadSampleDigit Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpCount As Integer, ByRef upDigit As Integer) As Integer


'========== API group of input module state check ===================================================================================
'Inspect if there is no data in memory buffer of specified input channel
'=================================================================================================='
' *upEmpty     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferEmpty Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upEmpty As Integer) As Integer


'Inspect if the data is more than the upper limit specified in memory buffer of specified input channel
'=================================================================================================='
' *upUpper     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferUpper Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUpper As Integer) As Integer


'Inspect if the data is less than the upper limit specified in memory buffer of specified input channel
'=================================================================================================='
' *upLower     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferLower Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upLower As Integer) As Integer


'==External Trigger Mode Function
'Start external trigger mode of the selected channels of specified input module.
'==================================================================================================//
' lSize           : Number of channels to use external trigger on specified input module
' *lpChannelPos   : Index of channels to use external trigger on specified input module
Public Declare Function AxaiExternalStartADC Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lSize As Integer, ByRef lpChannelPos As Integer) As Integer
'Stop external trigger mode of specified input module.
Public Declare Function AxaiExternalStopADC Lib "AXL.dll" (ByVal lModuleNo As Integer) As Integer
'Return FIFO status of specified input module
'=================================================================================================='
' upStatus         : FIFO_DATA_EXIST(0)
'                  : FIFO_DATA_EMPTY(1)
'                  : FIFO_DATA_HALF(2)
'                  : FIFO_DATA_FULL(6)
'=================================================================================================='
Public Declare Function AxaiExternalReadFifoStatus Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upStatus As Integer) As Integer
'Read converted A/D value from external signal of specified input module.
' lSize           : Number of channels to read converted A/D value in specified input module
' *lpChannelPos   : Index of channels to read converted A/D value in specified input module
' lDataSize       : Number of maximum data to read converted A/D value by external trigger
' lBuffSize       : Size of externally allocated data buffer
' lStartDataPos   : Starting location of data buffer saving
' *dpVolt         : Two-demensional array pointer(for receiving value of converted to A/D)
' *lpRetDataSize  : Actually assigned number to data buffer(converted A/D value)
' *dwpStatus      : Return FIFO status when read converted A/D value from Fifo(H/W Buffer)
Public Declare Function AxaiExternalReadVoltage Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lSize As Integer, ByRef lpChannelPos As Integer, ByVal lDataSize As Integer, ByVal lBuffSize As Integer, ByVal lStartDataPos As Integer, ByRef dpVolt As Double, ByRef lpRetDataSize As Integer, ByRef upStatus As Integer) As Integer


'========== API group of output module information search ========================================================================================
'Verify module number with specified output channel number
Public Declare Function AxaoInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpModuleNo As Integer) As Integer


'Verify entire number of channel of analog output module
Public Declare Function AxaoInfoGetChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Integer) As Integer


'========== API group for output module setting and verification ========================================================================================
'Set output voltage range in specified output channel
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoSetRange Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Integer


'Verify output voltage range in specified output channel
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoGetRange Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpMinVolt As Double, ByRef dpMaxVolt As Double) As Integer


'Set output voltage range in specified multiple output channels
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoSetMultiRange Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Integer


'The Input voltage is output in specified output channel
Public Declare Function AxaoWriteVoltage Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dVolt As Double) As Integer


'The Input voltage is output in specified multiple output channel
Public Declare Function AxaoWriteMultiVoltage Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByRef dpVolt As Double) As Integer


'Verify voltage which is output in specified output channel
Public Declare Function AxaoReadVoltage Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpVolt As Double) As Integer


'Verify voltage which is output in specified multiple output channels
Public Declare Function AxaoReadMultiVoltage Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByRef dpVolt As Double) As Integer


'============================ AXA User Define Pattern Generator ============================
' API function for setting 'Channel User Define Pattern Generator'
' Outputting pattern every time depending on AxaoPgSetUserInterval setting
' lLoopCnt       : '0'(Repeat input pattern infinitely), 'value' : Keep last pattern, After outputting input pattern for specified number of times
'                : (MAX : 60000)
' lPatternSize   : Number of input pattern(MAX : 8192)
Public Declare Function AxaoPgSetUserPatternGenerator Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal lLoopCnt As Integer, ByVal lPatternSize As Integer, ByRef dpPattern As Double) As Integer

' API function for getting 'user define pattern generator'
Public Declare Function AxaoPgGetUserPatternGenerator Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpLoopCnt As Integer, ByRef lpPatternSize As Integer, ByRef dpPattern As Double) As Integer

' API function for setting 'pattern generator interval' of corresponding channel
' Unit : us(Default resolution : 500uSec)
Public Declare Function AxaoPgSetUserInterval Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dInterval As Double) As Integer

' API function for getting 'pattern generator interval' of corresponding channel
Public Declare Function AxaoPgGetUserInterval Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpInterval As Double) As Integer

' API function for getting 'Pattern Index / Loop Cnt' of corresponding channel
' In the case of status, following status can be included.
' lpIndexNum : The index of current user pattern
' lpLoopCnt : Number of currently running loop
' dwpInBusy : Driving status of Pattern Generator
Public Declare Function AxaoPgGetStatus Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpIndexNum As Integer, ByRef lpLoopCnt As Integer, ByRef dwpInBusy As Integer) As Integer


' API function for start 'User Define Pattern Generator' of corresponding channel ('AO' output start)
' Inputting start channel number as an array
' Start pattern generator function simultaneously for input channel.
Public Declare Function AxaoPgSetUserStart Lib "AXL.dll" (ByVal lpChannelNo As Integer, ByVal lSize As Integer) As Integer


' API function for stopping 'User Define Pattern Generator' of corresponding channel ('AO' output stop)
' Output value is switched to 0 volt when output is stopped
Public Declare Function AxaoPgSetUserStop Lib "AXL.dll" (ByRef lpChannelNo As Integer, ByVal lSize As Integer) As Integer


' API function for clearing Pattern Data(Reset all areas to 0x00)
Public Declare Function AxaPgSetUserDataReset Lib "AXL.dll" (ByVal lChannelNo As Integer) As Integer


' API function for setting output status by each channel when specified output module network is broken
'===============================================================================================//
' lChannelNo  : Channel number(Distributed slave products only)
' dwSetValue  : Setting value
'             : 1 --> Analog Max
'             : 2 --> Analog MIN
'             : 3 --> User Vaule(Default user value : 0V, You can change this value by 'AxaoSetNetworkErrorUserValue()')
'             : 4 --> Analog 0 V
'==============================================================================================='
Public Declare Function AxaoSetNetworkErrorAct Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwSetValue As Integer) As Integer

' API function for setting output status in bytes when specified output module network is broken
'==============================================================================================='
' lChannelNo  : Channel number(Distributed slave products only)
' dVolt       : Analog output voltage(User defined value)
'==============================================================================================='
Public Declare Function AxaoSetNetworkErrorUserValue Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dVolt As Double) As Integer


End Module
